--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.jsonl filter=lfs diff=lfs merge=lfs -text
 *.jsonL filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
