--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,5 @@
 *.jsonl filter=lfs diff=lfs merge=lfs -text
 *.jsonL filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
+*.pth filter=lfs diff=lfs merge=lfs -text
